tests/src/frontend/typechecking/invalid/readonly_lambda_8.sk
base class Hide
class Foo<T: () -> Int>(v: T) extends Hide

fun no(foo: readonly Hide): void {
  foo match {
  | Foo(v) -> _ = v()
  }
}
